# amd_tootle

./: .gitignore  .travis.yml  README.md  appveyor.yml
Scripts/: FetchDependencies.py
src/: CMakeLists.txt
src/TootleLib/: CMakeLists.txt  Stripifier.cpp  TootlePCH.h  aligned_malloc.cpp  array.h  cloud.h  clustering.cpp  d3doverdrawwindow.cpp  d3doverdrawwindow.h  d3dwindow.h  d3dwm.cpp  d3dwm.h  error.c  error.h  feedback.cpp  fit.cpp  fit.h  gdiwm.cpp  gdiwm.h  makefile  mesh.h  overdraw.cpp  overdraw.h  rcarray.h  soup.cpp  soup.h  souptomesh.cpp  tootlelib.cpp  triorder.cpp  viewpoints.h  window.h
src/TootleLib/RayTracer/: CMakeLists.txt  TootleRaytracer.cpp  makefile
src/TootleLib/RayTracer/JRT/: JRTBoundingBox.cpp  JRTCamera.cpp  JRTCore.cpp  JRTH2KDTreeBuilder.cpp  JRTHeuristicKDTreeBuilder.cpp  JRTKDTree.cpp  JRTKDTreeBuilder.cpp  JRTMesh.cpp  JRTMesh.h  JRTOrthoCamera.cpp  JRTPPMImage.cpp  JRTTriangleIntersection.cpp
src/TootleLib/RayTracer/Math/: JMLSSEVec.h
src/TootleLib/include/: tootlelib.h
src/TootleSample/: CMakeLists.txt  MaterialSort.cpp  ObjLoader.cpp  ObjLoader.h  Timer.cpp  Timer.h  Tootle.cpp  makefile
